Kubernetes-deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: your-app
  template:
    metadata:
      labels:
        app: your-app
    spec:
      containers:
        - name: your-container
          image: 23423424234234.dkr.ecr.us-west-1.amazonaws.com/docker-repository:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ecr-secret
