Kubernetes-deployments/web-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: your-service
  namespace: test
spec:
  selector:
    app: your-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
